tests/rosetta/out/C/best-shuffle.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:38Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int nextRand(int seed) { return (seed * 1664525 + 1013904223) % 2147483647; }

list_int shuffleChars(char *s, int seed) {
  list_string chars = list_string_create(0);
  __auto_type i = 0;
  while (i < strlen(s)) {
    list_string tmp1 = list_string_create(1);
    tmp1.data[0] = slice_string(s, i, i + 1);
    list_string tmp2 = concat_list_string(chars, tmp1);
    chars = tmp2;
    i = i + 1;
  }
  __auto_type sd = seed;
  __auto_type idx = chars.len - 1;
  while (idx > 0) {
    sd = nextRand(sd);
    __auto_type j = sd % (idx + 1);
    __auto_type tmp = chars.data[idx];
    chars.data[idx] = chars.data[j];
    chars.data[j] = tmp;
    idx = idx - 1;
  }
  __auto_type res = "";
  i = 0;
  while (i < chars.len) {
    char *tmp3 = concat_string(res, chars.data[i]);
    res = tmp3;
    i = i + 1;
  }
  list_string tmp4 = list_string_create(2);
  tmp4.data[0] = res;
  tmp4.data[1] = sd;
  return tmp4;
}

list_int bestShuffle(char *s, int seed) {
  __auto_type r = shuffleChars(s, seed);
  __auto_type t = r.data[0];
  __auto_type sd = r.data[1];
  list_string arr = list_string_create(0);
  __auto_type i = 0;
  while (i < t.len) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = slice_string(t, i, i + 1);
    list_string tmp6 = concat_list_string(arr, tmp5);
    arr = tmp6;
    i = i + 1;
  }
  i = 0;
  while (i < arr.len) {
    __auto_type j = 0;
    while (j < arr.len) {
      if (i != j && arr.data[i] != slice_string(s, j, j + 1) &&
          arr.data[j] != slice_string(s, i, i + 1)) {
        __auto_type tmp = arr.data[i];
        arr.data[i] = arr.data[j];
        arr.data[j] = tmp;
        break;
      }
      j = j + 1;
    }
    i = i + 1;
  }
  __auto_type count = 0;
  i = 0;
  while (i < arr.len) {
    if ((strcmp(arr.data[i], slice_string(s, i, i + 1)) == 0)) {
      count = count + 1;
    }
    i = i + 1;
  }
  __auto_type out = "";
  i = 0;
  while (i < arr.len) {
    char *tmp7 = concat_string(out, arr.data[i]);
    out = tmp7;
    i = i + 1;
  }
  list_string tmp8 = list_string_create(3);
  tmp8.data[0] = out;
  tmp8.data[1] = sd;
  tmp8.data[2] = count;
  return tmp8;
}

int mochi_main() {
  list_string ts = list_string_create(6);
  ts.data[0] = "abracadabra";
  ts.data[1] = "seesaw";
  ts.data[2] = "elk";
  ts.data[3] = "grrrrrr";
  ts.data[4] = "up";
  ts.data[5] = "a";
  __auto_type seed = 1;
  __auto_type i = 0;
  while ((i < 6)) {
    __auto_type r = bestShuffle(ts.data[i], seed);
    __auto_type shuf = r.data[0];
    seed = r.data[1];
    __auto_type cnt = r.data[2];
    char *tmp9 = concat_string(ts.data[i], " -> ");
    char *tmp10 = concat_string(tmp9, shuf);
    char *tmp11 = concat_string(tmp10, " (");
    char *tmp12 = _str(cnt);
    char *tmp13 = concat_string(tmp11, tmp12);
    char *tmp14 = concat_string(tmp13, ")");
    char *tmp15 = concat_string(ts.data[i], " -> ");
    char *tmp16 = concat_string(tmp15, shuf);
    char *tmp17 = concat_string(tmp16, " (");
    char *tmp18 = _str(cnt);
    char *tmp19 = concat_string(tmp17, tmp18);
    char *tmp20 = concat_string(tmp19, ")");
    printf("%d\n", tmp20);
    i = i + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
